final swagger and new docker
