# my-app/src/swaggerTest.json
@@ -19,6 +19,18 @@
         "description": "linearEqation"
       }
     ],
+    "securityDefinitions": {
+      "Bearer": {
+        "type": "apiKey",
+        "name": "Authorization",
+        "in": "header"
+      }
+    },
+    "security": [
+      {
+        "Bearer": []
+      }
+    ],
     "paths": {
       "/rootEqation": {
         "get": {
